# ed-sandbox

./: .gitignore  Cargo.toml
src/: ed.rs  ed2.rs  ed3.rs  lib.rs  main.rs  mnist.rs  sandbox.rs  train_all_mnist.rs  train_mnist.rs
src/ed3/: differentiable_fn.rs  gate.rs  layer.rs  loss_fn.rs  mnist.rs  util.rs
