[package]
name = "xor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"

[[bin]]
name = "sandbox"
path = "src/sandbox.rs"

[[bin]]
name = "bp"
path = "src/bp.rs"

[[bin]]
name = "ed"
path = "src/ed.rs"

[[bin]]
name = "ed2"
path = "src/ed2.rs"

[[bin]]
name = "ed3"
path = "src/ed3.rs"
